# CASCADE_V

./: .dockerignore  .gitattributes  .gitignore  CASCADE_V_APPROACH.md  CLAUDE.md  DEMO_WALKTHROUGH.md  Dockerfile  Makefile  NOTICE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
data/: catalog_metadata.json  ground_truth.json
logs/: training.json
outputs/: results.csv
outputs/proofs/: demucs_test_001.smt2  demucs_test_001__bass.smt2  demucs_test_001__drums.smt2  demucs_test_001__other.smt2  output_000.smt2  output_000__bass.smt2  output_000__drums.smt2  output_000__other.smt2  output_000__vocals.smt2  output_001.smt2  output_001__bass.smt2  output_001__drums.smt2  output_001__guitar.smt2  output_001__other.smt2  output_001__vocals.smt2  output_002.smt2  output_002__bass.smt2  output_002__drums.smt2  output_002__guitar.smt2  output_002__other.smt2  output_003.smt2  output_003__bass.smt2  output_003__drums.smt2  output_003__other.smt2  output_003__vocals.smt2  output_004.smt2  output_004__drums.smt2  output_004__other.smt2  output_005.smt2  output_005__bass.smt2  output_005__drums.smt2  output_005__other.smt2  output_006.smt2  output_006__drums.smt2  output_006__other.smt2  output_006__vocals.smt2  output_007.smt2  output_007__bass.smt2  output_007__drums.smt2  output_007__other.smt2  (+103 more)
outputs/receipts/: output_000.json  output_001.json  output_002.json  output_003.json  output_004.json  output_005.json  output_006.json  output_007.json  output_008.json  output_009.json  output_010.json  (+19 more)
scripts/: attribute.py  build_catalog.py  build_catalog_from_slakh.py  build_embeddings_and_tests.py  evaluate_all.py  full_train_eval.sh  train_encoder.py
tests/: conftest.py  test_core_math.py  test_currencies.py  test_demucs_selector.py  test_determinism.py  test_encoder_shape.py  test_imports.py  test_pipeline_integration.py  test_pipeline_smoke.py  test_synth.py
(+80 files in other folders)
