[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade_v"
version = "0.2.0"
description = "CASCADE-V: Coalition-Aware Source Crediting And Decomposed Engine, Verified."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Gaurav Gupta"}]
license = {text = "Proprietary"}
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.13.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "soundfile>=0.12.1",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",
    "mpmath>=1.3.0",
    "z3-solver>=4.13.0",
    "tqdm>=4.66.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.8.0"]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
]
# Slakh2100 ingestion + BPM/key estimation (Workstream 1).
# librosa is also used by the BPM/key pre-filter in Stage-1 triage at runtime.
audio_meta = [
    "librosa>=0.10.2",
    "pyyaml>=6.0",
    "pretty_midi>=0.2.10",
]
# Density-based clustering for Stage 2 (CLUSTERING_METHOD="hdbscan").
hdbscan = ["hdbscan>=0.8.40"]
# Foundation-model encoder (Workstream 2: ENCODER_KIND="clap_proj"/"clap").
clap = [
    "transformers>=4.44.0",
]
dev = ["pytest>=8.0.0"]

[project.scripts]
cascade-build-catalog = "cascade_v.cli.build_catalog:app"
cascade-train         = "cascade_v.cli.train_encoder:app"
cascade-embed         = "cascade_v.cli.build_embeddings:app"
cascade-attribute     = "cascade_v.cli.attribute:app"
cascade-evaluate      = "cascade_v.cli.evaluate_all:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: requires real torch and z3 (slow)",
]
